--- a/recruit-gui/src/app/suggestions/suggestions.component.css
+++ b/recruit-gui/src/app/suggestions/suggestions.component.css
@@ -23,6 +23,7 @@
 
 .filter-options-group{
 	text-align:center;
+	margin-bottom:20px;
 }
 
 .country-selected-true{
@@ -60,3 +61,43 @@
 	padding:5px;
 	padding-left:10px;
 }
+
+.selected-skill{
+	margin:2px;
+ 	padding:5px;
+ 	border-radius:5px;
+ 	background:grey;
+ 	display:inline-block;
+ }
+ 
+.selected-skill:hover{
+ 	margin:2px;
+ 	padding:5px;
+ 	border-radius:5px;
+ 	background:red;
+ 	cursor:pointer;
+ 	display:inline-block;
+ }
+ 
+.skills-filter-options-group{
+	max-width:250px;
+ }
+ 
+ .skill-filters{
+ 	margin-top:10px;
+ }
+ 
+ .min-max{
+ 	width:60px;
+ }
+ 
+ .lang-checkbox{
+	 margin-right:2px;
+ }
+
+.add-skill-btn{
+	width:50px;
+	margin-left:5px;
+	padding-left:5px;
+	padding-right:5px;
+} 
