--- a/recruit-gui/src/app/suggestions/suggestions.component.css
+++ b/recruit-gui/src/app/suggestions/suggestions.component.css
@@ -101,3 +101,18 @@
 	padding-left:5px;
 	padding-right:5px;
 } 
+
+.search-label{
+	font-weight:bold;
+	fon-size:20px;
+	margin-right:10px;
+}
+
+.suggestion-icon{
+	float:left;
+	border:2px solid grey; 
+	padding:10px; 
+	margin:10px;
+	width:200px;
+	height:150px;
+}
