--- a/recruit-gui/src/app/suggestions/suggestions.component.css
+++ b/recruit-gui/src/app/suggestions/suggestions.component.css
@@ -114,11 +114,13 @@
 	margin:10px;
 	width:200px;
 	height:150px;
+	cursor:pointer;
 }
 
 .suggestion-icon-body{
 	text-align:center;
 	margin-top:20px;
+	font-size:14px;
 }
 
 .suggestion-icon-header{
@@ -128,4 +130,5 @@
 	font-size:16px;
 	width:100%;
 	padding:5px;
+	color:white;
 }
