--- a/recruit-gui/src/app/suggestions/suggestions.component.html
+++ b/recruit-gui/src/app/suggestions/suggestions.component.html
@@ -7,8 +7,8 @@
 			<label class="search-label">Search:</label><input type="text" value="Java Developer" class="suggestion-search-bar" formControlName="searchPhrase">
 		</div>
 		
-		<!-- Filter Options -->
-		<div class="left-menu">
+		
+		<div class="left-menu" *ngIf="currentView === 'suggestion-results'">
 			
 			<h5>Filter Options</h5>
 				<div class="filter-options-group">
@@ -72,12 +72,14 @@
 		</div>
 
 	</form>
+	
+	
 
 	<!-- Suggestion Results -->
-	<div *ngIf="true" class="suggestion-results" style="max-width:75%;">
+	<div *ngIf="currentView === 'suggestion-results'" class="suggestion-results" style="max-width:75%;">
 	
 	
-		<div class="suggestion-icon" *ngFor="let suggestion of suggestions">
+		<div class="suggestion-icon" *ngFor="let suggestion of suggestions" (click)="showSuggestedCandidateOverview(suggestion)">
 		
 			<div class="suggestion-icon-header">
 				C{{suggestion.candidateId}}
@@ -94,18 +96,134 @@
 			</div>
 		</div>
 	</div>
-	
-	<!-- Suggestion Profile -->
-	<div *ngIf="false" class="suggestion-results">
-		Candidate auto profile
-		 - Name
-		 - CV download
-		 - Not available flag
-		 - Matched skills listed
-		 - Country
-		 - Job title
-		 - Years experience
-		 - Languages spoken
-	</div>
 
+	<!-- Suggestion Profile -->
+	<div class="left-menu" *ngIf="currentView !== 'suggestion-results'">
+		<div class="suggestion-summary-infobox">
+			<div class="suggestion-summary-infobox-header">
+				<h3 >Languages</h3>
+			</div>
+			<div class="suggestion-summary-infobox-body">
+				<table class="table" style="text-align:left;">
+					<tr *ngFor="let language of suggestedCandidate.languages">
+						<td>{{getLanguage(language.language)}}</td>
+						<td>{{language.level}}</td>
+					</tr>
+				</table>
+			</div>
+		</div>
+		<div class="suggestion-summary-infobox">
+			<div class="suggestion-summary-infobox-header">
+				<h3>Match Accuracy</h3>
+			</div>
+			<div  class="suggestion-summary-infobox-body">
+			
+				<div>
+					<div>
+						<div style="text-align:left">Skills</div>
+						<div class="suggestion-perception-{{suggestedCandidate.accuracySkills}}"></div>
+					
+					</div>
+					
+					<div>
+						<div style="text-align:left">Languages</div>
+						<div class="suggestion-perception-{{suggestedCandidate.accuracyLanguages}}"></div>
+					
+					</div>
+					
+				</div>
+			
+			</div>
+		</div>
+		<div class="suggestion-summary-infobox">
+			<div class="suggestion-summary-infobox-header">
+				<h3>Matching Skills</h3>
+			</div>
+			<div class="suggestion-summary-infobox-body">
+				<div>
+					<div style="float:center" *ngFor="let skill of skillFilters" class="{{hasRequiredSkill(skill)}}">
+						{{skill}}
+					</div>
+				</div>
+				<div>&nbsp;</div>
+			</div>
+		</div>
+		
+	</div>
+	
+	
+	<div *ngIf="currentView === 'suggested-canidate-overview'" class="suggestion-results" style="width:50%;">
+
+		<div style="text-align:right;margin-bottom:50px;">
+			<button *ngIf="!suggestedCandidate.flaggedAsUnavailable" class="btn btn-secondary btn-action" (click)="markCandidateAsUnavailable()" style="margin-right:10px;" title="If the candidtae is no longer available use this button to let us know and we will remove them form the system.">Flag as unavailable</button>
+			<button *ngIf="suggestedCandidate.flaggedAsUnavailable" disabled class="btn btn-secondary btn-action" style="margin-right:10px;background:red;">Flagged as unavailable</button>
+	    	
+			<a class="currliculum-link" href="{{getCurriculumDownloadUrl(suggestedCandidate.candidateId)}}" >
+				<button class="btn btn-secondary btn-action" style="margin-right:10px;" >Download CV</button>
+			</a>
+			
+			<button class="btn btn-secondary btn-action" (click)="copyEmailToClipboard()">Copy Email to Clipboard</button>
+			<button class="btn btn-secondary btn-action" (click)="showSuggestionsResults()">back</button>
+		 </div>
+		 		
+		<div>
+		
+			<h1 class="suggestion-role-header">{{suggestedCandidate.roleSought}}</h1>
+			
+			<div>
+				<table class="table candidate-suggestion-table">
+					<tr>
+						<td class="candidate-suggestion-table-hdr">Canidate Number</td>
+						<td>{{suggestedCandidate.candidateId}}</td>
+					</tr>
+					<tr>
+						<td class="candidate-suggestion-table-hdr">Name</td>
+						<td>{{suggestedCandidate.firstname}} {{suggestedCandidate.surname}}</td>
+					</tr>
+					<tr>
+						<td class="candidate-suggestion-table-hdr">Country</td>
+						<td *ngIf="suggestedCandidate.country === 'NETHERLANDS'">
+							<span class="flag-icon flag-icon-nl suggestion-flag-country"></span>
+						</td>
+						<td *ngIf="suggestedCandidate.country === 'BELGIUM'">
+							<span class="flag-icon flag-icon-be  suggestion-flag-country"></span>
+						</td>
+						<td *ngIf="suggestedCandidate.country === 'UK'">
+							<span class="flag-icon flag-icon-gb  suggestion-flag-country"></span>
+						</td>
+					</tr>
+					<tr>
+						<td class="candidate-suggestion-table-hdr">City</td>
+						<td>{{suggestedCandidate.city}}</td>
+					</tr>
+					<tr>
+						<td class="candidate-suggestion-table-hdr">Years Experience</td>
+						<td>{{suggestedCandidate.yearsExperience}}</td>
+					</tr>
+					<tr>
+						<td class="candidate-suggestion-table-hdr">Contract roles</td>
+						<td>{{suggestedCandidate.freelance}}</td>
+					</tr>
+					<tr>
+						<td class="candidate-suggestion-table-hdr">Perm roles</td>
+						<td>{{suggestedCandidate.perm}}</td>
+					</tr>
+				</table>
+			</div>
+			
+				
+		</div>
+		
+		
+		
+		
+		<!-- Suggested Candidaye Stats -->
+		
+
+		
+			
+		
+		
+
+	</div>
 </div>
