--- a/recruit-gui/src/app/suggestions/suggestions.component.css
+++ b/recruit-gui/src/app/suggestions/suggestions.component.css
@@ -1,12 +1,13 @@
 .left-menu{
 	float:left;
-	margin:20px;
+	margin:10px;
 	background:#E8E8E8;
-	min-height:70vh;
+	min-height:72vh;
 	min-width:300px;
 	border:5px solid #6c757d;
 	border-radius:25px;
 	padding:10px;
+	font-size:14px;
 }
 
 .suggestion-results{
@@ -23,7 +24,7 @@
 
 .filter-options-group{
 	text-align:center;
-	margin-bottom:20px;
+	margin-bottom:10px;
 }
 
 .country-selected-true{
@@ -136,6 +137,8 @@
 .suggestion-summary-infobox{
 	background:#E8E8E8;
 	margin:10px;
+	margin-top:0px;
+	margin-bottom:0px;
 	width:250px;
 }
 
