--- a/recruit-gui/src/app/app.component.css
+++ b/recruit-gui/src/app/app.component.css
@@ -1,17 +1,13 @@
-.footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: #2b2b2b;
-  color: white;
-  text-align: center;
-}
-
-.footer p{
-    color:#ffffff;
-    font-weight:bold;
-    text-align:right;
-    padding-right:20px;
-    margin-top:10px;
+.terms-and-conditions-box{
+	position:absolute;
+	float:right;
+	right:0;
+	bottom:0;
+	width: 500px;
+	margin:10px;
+	background-color: white;
+	border:2px solid blue;
+	width:500px;
+	height:250px;
+	
 }
