--- a/recruit-gui/src/app/app.component.css
+++ b/recruit-gui/src/app/app.component.css
@@ -4,10 +4,38 @@
 	right:0;
 	bottom:0;
 	width: 500px;
-	margin:10px;
+	margin:15px;
 	background-color: white;
-	border:2px solid blue;
+	border:5px solid #6A5ACD;
 	width:500px;
 	height:250px;
-	
+	border-radius:25px;
+}
+
+.cookie-policy-hdr{
+	height:50px;
+	background:#E8E8E8;
+	border-radius:25px 25px 0px 0px;
+}
+
+.cookie-policy-btn{
+	float:right;
+	margin-top:10px;
+	margin-right:10px;
+}
+
+.cookie-policy-title{
+	font-size:24px;
+	font-weight:bold;
+	margin-top:10px;
+	position:relative;
+	top:5px;
+	margin-left:10px;
+}
+
+.cookie-policy-text{
+	overflow-y:scroll; 
+	height:150px;
+	margin:10px;
+	font-size:12px;
 }
