--- a/recruit-gui/src/app/listing/listing.component.html
+++ b/recruit-gui/src/app/listing/listing.component.html
@@ -32,12 +32,12 @@
 								<table >
 									<tr>
 										<td class="listing-table-td"  width="5%" >
-											<span *ngIf="listing.country === 'NETHERLANDS'"  	class="flag-icon flag-icon-nl suggestion-flag-country listing-country"></span>
-											<span *ngIf="listing.country === 'BELGIUM'"			class="flag-icon flag-icon-be suggestion-flag-country listing-country"></span>
-											<span *ngIf="listing.country === 'UK'"				class="flag-icon flag-icon-gb suggestion-flag-country listing-country"></span>
-											<span *ngIf="listing.country === 'IRELAND'"			class="flag-icon flag-icon-ie suggestion-flag-country listing-country"></span>
-											<span *ngIf="listing.country === 'EU_REMOTE'"		class="flag-icon flag-icon-eu suggestion-flag-country listing-country"></span>
-											<span *ngIf="listing.country === 'WORLD_REMOTE'"	class="flag-icon flag-icon-xx suggestion-flag-country listing-country"></span>		
+											<span title="{{listing.listingId}}" *ngIf="listing.country === 'NETHERLANDS'"  	class="flag-icon flag-icon-nl suggestion-flag-country listing-country"></span>
+											<span title="{{listing.listingId}}" *ngIf="listing.country === 'BELGIUM'"		class="flag-icon flag-icon-be suggestion-flag-country listing-country"></span>
+											<span title="{{listing.listingId}}" *ngIf="listing.country === 'UK'"			class="flag-icon flag-icon-gb suggestion-flag-country listing-country"></span>
+											<span title="{{listing.listingId}}" *ngIf="listing.country === 'IRELAND'"		class="flag-icon flag-icon-ie suggestion-flag-country listing-country"></span>
+											<span title="{{listing.listingId}}" *ngIf="listing.country === 'EU_REMOTE'"		class="flag-icon flag-icon-eu suggestion-flag-country listing-country"></span>
+											<span title="{{listing.listingId}}" *ngIf="listing.country === 'WORLD_REMOTE'"	class="flag-icon flag-icon-xx suggestion-flag-country listing-country"></span>	
 										</td>
 										<td class="listing-table-td-date" 	width="15%" ><b>{{listing.created | date:'MMM-dd'}}</b></td>
 										<td class="listing-table-td-date" 	width="15%" ><b>{{getContractType(listing.type)}}</b></td>
