bug fix contract type suggestions

--- a/recruit-gui/src/app/suggestions/suggestions.component.html
+++ b/recruit-gui/src/app/suggestions/suggestions.component.html
@@ -25,7 +25,7 @@
 				<div class="filter-options-group">
 					<h5>Contract type</h5>
 					<select formControlName="contractType">
-						<option value="BOTH">Both</option>
+						<option value="BOTH">Both (Includes unknown)</option>
 						<option value="CONTRACT">Contract</option>
 						<option value="PERM">Permanent</option>
 					</select>
